# ausum

./: .gitignore  LICENSE  README.md  ausum.py  pyproject.toml  ytx.py
docs/plans/: 2026-02-15-parakeet-transcription-design.md
tests/: test_cli_spec_compliance.py
